--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                 <h2 class="h2-contacto">Contactame</h2>
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ab optio, delectus fugiat beatae perspiciatis ipsum tenetur minima quis quaerat.</span>
                 <div class="iconos-contacto">
-                    <a href="https://github.com/lulabath" target="_blank"><i class="fa-brands fa-github" class="i-contacto"></i><span>/lulabath</span></a><br>
-                    <a href="https://www.linkedin.com/in/luna-agustina-bath/" target="_blank"><i class="fa-brands fa-linkedin-in" class="i-contacto"></i><span>/luna-agustina-bath/</span></a><br>
-                    <i class="fa-solid fa-envelope" class="i-contacto"></i><span>lunaagustinabath@gmail.com</span><br>
+                    <a href="https://github.com/lulabath" target="_blank"><i class="fa-brands fa-github" class="i-contacto"></i>/lulabath</a><br>
+                    <a href="https://www.linkedin.com/in/luna-agustina-bath/" target="_blank"><i class="fa-brands fa-linkedin-in" class="i-contacto"></i>/luna-agustina-bath/</a><br>
+                    <i class="fa-solid fa-phone"></i>+549 221 356 2485
                 </div>
             </div>
             <div class="form-text">
@@ -136,7 +136,7 @@
                         <label><p class="p-form">Email*</p><input id="input-email" type="email" placeholder="user@gmail.com"></label>
                         <label type="text"><p class="p-form">Mensaje*</p></label> <input id="input-mensaje" type="text" placeholder="Su mensaje">
                     </div>
-                    <button class="button">Enviar</button>
+                    <button class="boton-presentacion">Enviar</button>
                 </form>
             </div>
         </div>
@@ -160,7 +160,6 @@
             <div class="iconos-footer">
                 <a href="https://github.com/lulabath" target="_blank"><i class="fa-brands fa-github" class="i-contacto"></i></a>
                 <a href="https://www.linkedin.com/in/luna-agustina-bath/" target="_blank"><i class="fa-brands fa-linkedin-in" class="i-contacto"></i></a>
-                <a href="#contacto"><i class="fa-solid fa-envelope" class="i-contacto" ></i></a>
             </div>
         </footer>
         <span class="footer-texto"><i class="fa-solid fa-carrot"></i>Hecho con amor por Luna Agustina Bath<i class="fa-solid fa-carrot"></i></span>
