--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                 </li>
             </ul>
             <div class="iconos-footer">
-                <a href="https://github.com/lulabath" target="_blank"><i class="fa-brands fa-github" class="i-contacto"></i></a>
-                <a href="https://www.linkedin.com/in/luna-agustina-bath/" target="_blank"><i class="fa-brands fa-linkedin-in" class="i-contacto"></i></a>
+                <a href="https://github.com/lulabath" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/luna-agustina-bath/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
             </div>
         </footer>
         <span class="footer-texto"><i class="fa-solid fa-carrot"></i>Hecho con amor por Luna Agustina Bath<i class="fa-solid fa-carrot"></i></span>
