--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a name="hola"><nav></a>
+        <nav>
             <ul>
                 <li class="links">
                     <a href="#hola">HOLA</a>
@@ -29,7 +29,7 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </header><a name="hola"></a>
     <section class="contenedor-presentacion">
         <div class="presentacion">
             <h2 class="h2-presentacion">¡Hola! Soy</h2>
@@ -41,9 +41,9 @@
             <img src="https://i.pinimg.com/564x/43/55/8a/43558a3751d472f7abba7ee4aca5c1f8.jpg" class="imagen-animada"  alt="imagen animada">
         </div>
     </section>
-    <section class="seccion-conocimientos">
+    <section class="seccion-conocimientos"><a name="conocimientos"></a>
         <div class="pantalla-conocimientos">
-            <a name="conocimientos"><h1 class="h1-subtitulos">Mis Conocimientos</h1></a>
+            <h1 class="h1-subtitulos">Mis Conocimientos</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, reprehenderit?</p>
         </div>
         <div class="contenedor-tarjetas">
@@ -78,42 +78,42 @@
             <p class="p-cita">Cuando estás inspirado por algún gran propósito, por algún extraordinario proyecto, los pensamientos rompen las barreras; la mente trasciende sus limitaciones, la conciencia se expande en todas direcciones y te encuentras en un nuevo mundo maravilloso.</p>
             <h2 class="h2-cita"> Patanjali</h2>
     </article>
-    <section class="seccion-proyectos">
-        <a name="proyectos"><h1 class="h1-subtitulos">Mis Proyectos</h1></a>
+    <section class="seccion-proyectos"><a name="proyectos"></a>
+        <h1 class="h1-subtitulos">Mis Proyectos</h1>
         <p class="p-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi pariatur error nulla unde reiciendis voluptate?</p>
         <section class="contenedor-tarjetas">
             <div class="tarjeta-proyecto">
-                <img src="https://i.pinimg.com/564x/65/69/b8/6569b84671e254fb3531076d4fdcb84b.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
+                <img src="https://i.pinimg.com/236x/46/20/e2/4620e27ef5063bac813f6409bbed1d78.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
                 <h3>Portfolio</h3>
             </div>
             <div class="tarjeta-proyecto">
-                <img src= "https://i.pinimg.com/236x/42/8a/84/428a842973de218b0e73a00c2ac152d8.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
+                <img src= "https://i.pinimg.com/236x/f8/e5/a7/f8e5a7f1ced5f80d784d851ee9b94a4a.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
                 <h3>Generador de memes</h3>
             </div>
             <div class="tarjeta-proyecto">
-                <img src="https://i.pinimg.com/236x/ec/2c/28/ec2c28c0338f104b7eecdf16dd9032fc.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
+                <img src="https://i.pinimg.com/236x/ae/63/d8/ae63d87b03770193dc3804f51afbd25b.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
                 <h3>Match 3</h3>
             </div>
             <div class="tarjeta-proyecto">
-                <img src="https://i.pinimg.com/236x/a5/85/b4/a585b4c98278d001b4019dbe1834d806.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
+                <img src="https://i.pinimg.com/236x/f0/79/8e/f0798e7e8b0a9a0766c89610676a8bb2.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
                 <h3>Controlador de gastos</h3>
             </div>
             <div class="tarjeta-proyecto">
-                <img src="https://i.pinimg.com/236x/17/5b/1e/175b1e6b19e5c89a7db65333409b47d9.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
+                <img src="https://i.pinimg.com/236x/e2/7b/8e/e27b8e577c5c98269cba8d02cf8a2279.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
                 <h3>Administrador de reuniones</h3>
             </div>
             <div class="tarjeta-proyecto">
-                <img src="https://i.pinimg.com/236x/ce/98/9c/ce989c0dd688b3b99a31400129d2d211.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
+                <img src="https://i.pinimg.com/236x/ec/f3/fe/ecf3fee19c7f2caa9c9da004a378728d.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
                 <h3>Todo app</h3>
             </div>
             <div class="tarjeta-proyecto">
-                <img src="https://i.pinimg.com/236x/3a/39/1e/3a391e27fd358e4eb49001c27d39d845.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
+                <img src="https://i.pinimg.com/236x/cb/53/d6/cb53d64ab92af6ef49098ece2976ea5e.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
                 <h3>Buscador de peliculas</h3>
             </div>
         </section>
     </section>
-    <section class="seccion-contactos">
-        <div class="contenedor-contacto"><a name="contacto"></a>
+    <section class="seccion-contactos"><a name="contacto"></a>
+        <div class="contenedor-contacto">
             <div class="contactame">
                 <h2 class="h2-contacto">Contactame</h2>
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ab optio, delectus fugiat beatae perspiciatis ipsum tenetur minima quis quaerat.</span>
@@ -128,13 +128,13 @@
                     <h2 class="h2-contacto">Escribime</h2>
                     <div class="contenedor-label-1">
                         <div class="div-nombre"><label for="input-name"><p class="p-form">Nombre*</p></label>
-                        <input type="text" id="input-name" placeholder="Jhon"></div>
+                        <input type="text" id="input-name" placeholder="Jhon" required></div>
                         <div class="div-apellido"><label for="input-lastname"><p class="p-form">Apellido*</p></label>
-                        <input type="text" id="input-lastname" placeholder="Doe"></div>
+                        <input type="text" id="input-lastname" placeholder="Doe"required></div>
                     </div>
                     <div class="contenedor-label-2">
-                        <label><p class="p-form">Email*</p><input id="input-email" type="email" placeholder="user@gmail.com"></label>
-                        <label type="text"><p class="p-form">Mensaje*</p></label> <input id="input-mensaje" type="text" placeholder="Su mensaje">
+                        <label><p class="p-form">Email*</p><input id="input-email" type="email" placeholder="user@gmail.com" required></label>
+                        <label type="text"><p class="p-form">Mensaje*</p></label><textarea type="text" id="input-mensaje"></textarea>
                     </div>
                     <button class="boton-presentacion">Enviar</button>
                 </form>
