--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <label><p class="p-form">Email*</p><input id="input-email" type="email" placeholder="user@gmail.com" required></label>
                         <label type="text"><p class="p-form">Mensaje*</p></label><textarea type="text" id="input-mensaje"></textarea>
                     </div>
-                    <button class="boton-presentacion">Enviar</button>
+                    <button class="boton-form">Enviar</button>
                 </form>
             </div>
         </div>
