--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="seccion-conocimientos"><a name="conocimientos"></a>
         <div class="pantalla-conocimientos">
             <h1 class="h1-subtitulos">Mis Conocimientos</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, reprehenderit?</p>
+            <p>En este apartado podrán encontrar los lenguajes en los que me formé.</p>
         </div>
         <div class="contenedor-tarjetas">
             <div class="tarjeta">
@@ -80,7 +80,7 @@
     </article>
     <section class="seccion-proyectos"><a name="proyectos"></a>
         <h1 class="h1-subtitulos">Mis Proyectos</h1>
-        <p class="p-proyecto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi pariatur error nulla unde reiciendis voluptate?</p>
+        <p class="p-proyecto">Algunos de los proyectos que hice. Podrás acceder a estos haciendo click sobre cada uno.</p>
         <section class="contenedor-tarjetas">
             <div class="tarjeta-proyecto">
                 <img src="https://i.pinimg.com/236x/46/20/e2/4620e27ef5063bac813f6409bbed1d78.jpg" class="imagen-proyecto" alt="imagen ilustrativa">
@@ -116,7 +116,7 @@
         <div class="contenedor-contacto">
             <div class="contactame">
                 <h2 class="h2-contacto">Contactame</h2>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ab optio, delectus fugiat beatae perspiciatis ipsum tenetur minima quis quaerat.</span>
+                <span>Debajo se encuentran a su disposición tanto los links a mis redes de contacto como mi teléfono personal por si desea ponerse en contacto conmigo; también encontrará un formulario que enviará su mensaje directamente a mi casilla de email.</span>
                 <div class="iconos-contacto">
                     <a href="https://github.com/lulabath" target="_blank"><i class="fa-brands fa-github" class="i-contacto"></i>/lulabath</a><br>
                     <a href="https://www.linkedin.com/in/luna-agustina-bath/" target="_blank"><i class="fa-brands fa-linkedin-in" class="i-contacto"></i>/luna-agustina-bath/</a><br>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="form-text">
-                <form id="form-text">
+                <form>
                     <h2 class="h2-contacto">Escribime</h2>
                     <div class="contenedor-label-1">
                         <div class="div-nombre"><label for="input-name"><p class="p-form">Nombre*</p></label>
